--- a/trunk/de.tudresden.inf.lat.gel/version.properties
+++ b/trunk/de.tudresden.inf.lat.gel/version.properties
@@ -1,16 +1,19 @@
 
-version=0.12.0
+version=0.16.0
 build.number=0
 
 requiredjars= \
-  lib/de.tudresden.inf.lat.jcel.core/jars/de.tudresden.inf.lat.jcel.core-0.12.0.jar \
-  lib/de.tudresden.inf.lat.jcel.owlapi/jars/de.tudresden.inf.lat.jcel.owlapi-0.12.0.jar \
-  lib/org.semanticweb.owlapi/jars/owlapi-bin-3.2.2.jar \
+  lib/jcel.core/jcel.core-0.16.0.jar \
+  lib/jcel.owlapi/jcel.owlapi-0.16.0.jar \
+  lib/jcel.ontology/jcel.ontology-0.16.0.jar \
+  lib/owlapi/owlapi-3.2.4.jar \
   lib/org.protege.editor/jars/org.protege.editor.core.application-4.1.jar \
   lib/org.protege.editor/jars/org.protege.editor.owl-4.1.jar \
 
 bundlejars= \
-  lib/de.tudresden.inf.lat.jcel.core/jars/de.tudresden.inf.lat.jcel.core-0.12.0.jar \
-  lib/de.tudresden.inf.lat.jcel.core/licenses/** \
-  lib/de.tudresden.inf.lat.jcel.owlapi/jars/de.tudresden.inf.lat.jcel.owlapi-0.12.0.jar \
-  lib/de.tudresden.inf.lat.jcel.owlapi/licenses/** \
+  lib/jcel.core/jcel.core-0.16.0.jar \
+  lib/jcel.core/*.txt \
+  lib/jcel.owlapi/jcel.owlapi-0.16.0.jar \
+  lib/jcel.owlapi/*.txt \
+  lib/jcel.ontology/jcel.ontology-0.16.0.jar \
+  lib/jcel.ontology/*.txt \
