--- a/de.tudresden.inf.lat.gel/build.xml
+++ b/de.tudresden.inf.lat.gel/build.xml
@@ -89,7 +89,7 @@
 	<!-- Compiles the whole project. -->
 	<target name="build">
 		<mkdir dir="${_main.bin.path}" />
-		<javac srcdir="${_src.main.path}" destdir="${_main.bin.path}" classpathref="libs.path" debug="on" debuglevel="${_debuglevel}" />
+		<javac srcdir="${_src.main.path}" destdir="${_main.bin.path}" classpathref="libs.path" debug="on" includeantruntime="false" debuglevel="${_debuglevel}" />
 	<!--	<mkdir dir="${_test.bin.path}" />
 		<javac srcdir="${_src.test.path}" destdir="${_test.bin.path}" classpath="${_main.bin.path}" classpathref="libs.path" debug="on" debuglevel="${_debuglevel}" />-->
 	</target>
