--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>de.tu-dresden.inf.lat.gel</groupId>
 	<artifactId>gel-parent</artifactId>
-	<version>0.17.0</version>
+	<version>0.17.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
