--- a/gel/pom.xml
+++ b/gel/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>de.tu-dresden.inf.lat.gel</groupId>
 	<artifactId>gel</artifactId>
-	<version>0.17.2</version>
+	<version>0.17.3-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<dependencies>
