--- a/update-info/protege-5/update.properties
+++ b/update-info/protege-5/update.properties
@@ -3,6 +3,6 @@ version=0.17.2
 download=https://github.com/julianmendez/gel/releases/download/v0.17.2/de.tu-dresden.inf.lat.gel-0.17.2.jar
 name=GEL
 readme=https://raw.githubusercontent.com/julianmendez/gel/master/README.md
-license=http://www.apache.org/licenses/LICENSE-2.0.txt
+license=https://www.apache.org/licenses/LICENSE-2.0.txt
 author=Andreas Ecke and Julian Mendez, TU Dresden
 
