--- a/gel/pom.xml
+++ b/gel/pom.xml
@@ -15,25 +15,25 @@
 		<dependency>
 			<groupId>de.tu-dresden.inf.lat.jcel</groupId>
 			<artifactId>jcel-owlapi</artifactId>
-			<version>0.24.0</version>
+			<version>${jcel.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>4.2.5</version>
+			<version>${owlapi.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>protege-editor-owl</artifactId>
-			<version>5.0.0</version>
+			<version>${protege.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>protege-editor-core</artifactId>
-			<version>5.0.0</version>
+			<version>${protege.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -48,6 +48,10 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+
+        <jcel.version>0.24.1</jcel.version>
+        <owlapi.version>4.5.9</owlapi.version>
+        <protege.version>5.5.0</protege.version>
 
 		<bundle.classpath>.</bundle.classpath>
 		<bundle.activator>org.protege.editor.core.plugin.DefaultPluginActivator</bundle.activator>
